--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,10 @@
 body{
     background-color: #f4f9ffea; 
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
     overflow-y: auto;
     margin: 0;
     padding: 0;
     box-sizing: border-box;  
+    width: 100%;
 }
